--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 	  crossorigin="anonymous"></script>
+	  <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Chewy|Fredoka+One|Russo+One" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
 	
-	<h1 id="headerOne"> Search Futbol GIPHY</h1>
+	
 
 	<div class="container">
+		<h1 id="headerOne"> Search Futbol GIPHY</h1>
 		<div class="row">
 			<div class="col-md-4">
 				<div id="gifButton">
+				<br><br><br>
 				</div>	
 			</div>
 		</div>
@@ -36,12 +42,9 @@
 			</div>
 		</div>
 		
-		<div class="row">
-			<div class="col-md-4">
+		
 				<div class="search">
 				</div>		
-			</div>
-		</div>
 	
 		<!-- <img src="https://media1.giphy.com/media/QQv8wGKesgDyE/giphy.gif"> -->
 	
